--- a/OpenRobertaUSB/pom.xml
+++ b/OpenRobertaUSB/pom.xml
@@ -20,30 +20,30 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<maven.compiler.source>1.7</maven.compiler.source>
 	</properties>
-	    <repositories>
-        <repository>
-            <id>ORA-releases</id>
-            <name>Open Roberta releases repository</name>
-            <url>http://ok-maven.iais.fraunhofer.de/artifactory/openroberta-snapshot-local</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>ORA-snapshots</id>
-            <name>Open Roberta snapshot repository</name>
-            <url>http://ok-maven.iais.fraunhofer.de/artifactory/openroberta-snapshot-local</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
+	<repositories>
+		<repository>
+			<id>ORA-releases</id>
+			<name>Open Roberta releases repository</name>
+			<url>http://ok-maven.iais.fraunhofer.de/artifactory/openroberta-snapshot-local</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>ORA-snapshots</id>
+			<name>Open Roberta snapshot repository</name>
+			<url>http://ok-maven.iais.fraunhofer.de/artifactory/openroberta-snapshot-local</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.json</groupId>
@@ -80,6 +80,11 @@
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.scream3r</groupId>
+			<artifactId>jssc</artifactId>
+			<version>2.8.0</version>
 		</dependency>
 
 	</dependencies>
@@ -178,25 +183,26 @@
 				</executions>
 			</plugin>
 			<plugin>
-                              <groupId>org.apache.maven.plugins</groupId>
-                              <artifactId>maven-shade-plugin</artifactId>
-                              <version>2.4.3</version>
-                              <executions>
-                                 <execution>
-                                   <phase>package</phase>
-                                   <goals>
-                                     <goal>shade</goal>
-                                   </goals>
-                                   <configuration>
-                                      <transformers>
-                                          <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                            <mainClass>de.fhg.iais.roberta.usb.Main</mainClass>
-                                          </transformer>
-                                     </transformers>
-                                   </configuration>
-                                </execution>
-                              </executions>
-                         </plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.4.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>de.fhg.iais.roberta.usb.Main</mainClass>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
