--- a/OpenRobertaUSB/src/main/resources/OpenRobertaUSB.properties
+++ b/OpenRobertaUSB/src/main/resources/OpenRobertaUSB.properties
@@ -1,6 +1,6 @@
 brickIp 10.0.1.1
-serverIp localhost
-serverPort 1999
+serverIp lab.open-roberta.org
+serverPort 80
 groupId = ${groupId}
 artifactId = ${artifactId}
 version = ${version}
