--- a/OpenRobertaUSB/pom.xml
+++ b/OpenRobertaUSB/pom.xml
@@ -59,6 +59,11 @@
 			<version>3.1</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
 			<groupId>lego.nxt</groupId>
 			<artifactId>pccomm</artifactId>
 			<version>1.0</version>
@@ -116,7 +121,7 @@
 						<goals>
 							<goal>copy</goal>
 						</goals>
-						
+
 						<configuration>
 							<artifactItems>
 								<artifactItem>
