add avrdude conf file

--- a/OpenRobertaUSB/src/main/resources/OpenRobertaUSB.properties
+++ b/OpenRobertaUSB/src/main/resources/OpenRobertaUSB.properties
@@ -9,5 +9,5 @@ buildTimeStamp = ${buildTimeStamp}
 
 
 WinPath= "./resources/windows/arduino/avrdude.exe"
-LinPath= "./resources/linux/arduino/"
+LinPath= ./resources/linux/arduino/avrdude
 OsXPath= "./resources/osx/arduino/"
