arduino usb program java integration, nxt driver requirement error fix

--- a/OpenRobertaUSB/src/main/resources/OpenRobertaUSB.properties
+++ b/OpenRobertaUSB/src/main/resources/OpenRobertaUSB.properties
@@ -8,6 +8,10 @@ buildTimeStamp = ${buildTimeStamp}
 
 
 
-WinPath= "./resources/windows/arduino/avrdude.exe"
-LinPath= ./resources/linux/arduino/avrdude
-OsXPath= "./resources/osx/arduino/"
+
+WinPath="./resources/windows/arduino/avrdude.exe"
+WinConfPath="./resources/windows/arduino/avrdude.conf"
+LinPath="./resources/linux/arduino/"
+LinConfPath="./resources/linux/arduino/avrdude.conf"
+OsXPath="./resources/osx/arduino/"
+MacConfPath="./resources/osx/arduino/"
