fix resources bug arduino

--- a/OpenRobertaUSB/src/main/resources/OpenRobertaUSB.properties
+++ b/OpenRobertaUSB/src/main/resources/OpenRobertaUSB.properties
@@ -6,12 +6,9 @@ artifactId = ${artifactId}
 version = ${version}
 buildTimeStamp = ${buildTimeStamp}
 
-
-
-
-WinPath="./resources/windows/arduino/avrdude.exe"
-WinConfPath="./resources/windows/arduino/avrdude.conf"
-LinPath="./resources/linux/arduino/"
-LinConfPath="./resources/linux/arduino/avrdude.conf"
-OsXPath="./resources/osx/arduino/"
-MacConfPath="./resources/osx/arduino/"
+WinPath = ./resources/windows/arduino/avrdude.exe
+WinConfPath = ./resources/windows/arduino/avrdude.conf
+LinPath = ./resources/linux/arduino/avrdude
+LinConfPath = ./resources/linux/arduino/avrdude.conf
+OsXPath = ./resources/osx/arduino/avrdude
+MacConfPath = ./resources/osx/arduino/avrdude.conf
