--- a/OpenRobertaUSB/pom.xml
+++ b/OpenRobertaUSB/pom.xml
@@ -22,7 +22,7 @@
 		<repository>
 			<id>ORA-releases</id>
 			<name>Open Roberta releases repository</name>
-			<url>http://ok-maven.iais.fraunhofer.de/artifactory/openroberta-snapshot-local</url>
+			<url>http://maven.iais.fraunhofer.de/artifactory/openroberta-release</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -33,9 +33,9 @@
 		<repository>
 			<id>ORA-snapshots</id>
 			<name>Open Roberta snapshot repository</name>
-			<url>http://ok-maven.iais.fraunhofer.de/artifactory/openroberta-snapshot-local</url>
+			<url>http://maven.iais.fraunhofer.de/artifactory/openroberta-snapshot-local</url>
 			<releases>
-				<enabled>false</enabled>
+				<enabled>true</enabled>
 			</releases>
 			<snapshots>
 				<enabled>true</enabled>
