--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: java
 
+addons:
+  apt:
+    packages:
+      - oracle-java9-installer
+matrix:
+  include:
+	jdk: oraclejdk9
+
 before_script:
 - cd OpenRobertaUSB
 
