--- a/OpenRobertaUSB/pom.xml
+++ b/OpenRobertaUSB/pom.xml
@@ -89,7 +89,11 @@
 			<artifactId>jssc</artifactId>
 			<version>2.8.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.3.0-alpha4</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
