--- a/OpenRobertaUSB/pom.xml
+++ b/OpenRobertaUSB/pom.xml
@@ -2,11 +2,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.fhg.iais.openroberta</groupId>
 	<artifactId>OpenRobertaUSB</artifactId>
-	<version>2.7.2-SNAPSHOT</version>
+	<version>2.9.0-SNAPSHOT</version>
 	<properties>
 		<!-- the server and the crosscompiler SHOULD be compatible between(including) the following two versions of software deployed on the ROBOT -->
 		<validversionrange.From>1.4.0</validversionrange.From>
-		<validversionrange.To>2.4.0</validversionrange.To>
+		<validversionrange.To>2.9.0</validversionrange.To>
 
 		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
 		<buildTimeStamp>${maven.build.timestamp}</buildTimeStamp>
@@ -14,9 +14,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<source.level>1.9</source.level>
-		<maven.compiler.target>1.7</maven.compiler.target>
-		<maven.compiler.source>1.7</maven.compiler.source>
+		<source.level>1.8</source.level>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 	<repositories>
 		<repository>
@@ -46,43 +46,22 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20140107</version>
+			<version>20180813</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.1</version>
+			<version>4.5.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.1</version>
+			<version>3.8</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.5</version>
-		</dependency>
-		<dependency>
-			<groupId>lego.nxt</groupId>
-			<artifactId>pccomm</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.bluecove</groupId>
-			<artifactId>bluecove</artifactId>
-			<version>2.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.bluecove</groupId>
-			<artifactId>bluecove-gpl</artifactId>
-			<version>2.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
-			<scope>test</scope>
+			<version>2.6</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fazecast</groupId>
@@ -92,7 +71,7 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.3.0-alpha4</version>
+			<version>1.2.3</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -102,76 +81,39 @@
 				<includes>
 					<include>**</include>
 				</includes>
-				
 				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<targetPath>${basedir}/../Resources/USBInstaller/Linux/resources/linux/arduino</targetPath>
+				<directory>resources/linux/arduino</directory>
+				<includes>
+					<include>avrdude</include>
+					<include>avrdude.conf</include>
+				</includes>
+			</resource>
+			<resource>
+				<targetPath>${basedir}/../Resources/USBInstaller/Windows/resources/windows/arduino</targetPath>
+				<directory>resources/windows/arduino</directory>
+				<includes>
+					<include>avrdude.exe</include>
+					<include>avrdude.conf</include>
+                    <include>libusb0.dll</include>
+				</includes>
+			</resource>
+			<resource>
+				<targetPath>${basedir}/../Resources/USBInstaller/OSX/resources/osx/arduino</targetPath>
+				<directory>resources/osx/arduino</directory>
+				<includes>
+					<include>avrdude</include>
+					<include>avrdude.conf</include>
+				</includes>
 			</resource>
 		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.5</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<configuration>
-							<archive>
-								<manifest>
-									<mainClass>de.fhg.iais.roberta.usb.USBProgramLauncher</mainClass>
-								</manifest>
-							</archive>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.9</version>
-				<executions>
-					<execution>
-						<id>copyServer</id>
-						<phase>pre-integration-test</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>de.fhg.iais.openroberta</groupId>
-									<artifactId>OpenRobertaUSB</artifactId>
-									<version>${project.version}</version>
-									<type>jar</type>
-									<overWrite>true</overWrite>
-								</artifactItem>
-							</artifactItems>
-							<outputDirectory>${basedir}/USBinstaller/Windows</outputDirectory>
-							<overWriteReleases>true</overWriteReleases>
-							<overWriteSnapshots>true</overWriteSnapshots>
-							<stripVersion>true</stripVersion>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.7</version>
-				<configuration>
-					<encoding>ISO-8859-1</encoding>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.shared</groupId>
-						<artifactId>maven-filtering</artifactId>
-						<version>1.3</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>2.4.3</version>
+				<version>3.1.1</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
@@ -200,52 +142,47 @@
 							<goal>launch4j</goal>
 						</goals>
 						<configuration>
-							<dontWrapJar>false</dontWrapJar>
 							<headerType>gui</headerType>
-							<jar>${basedir}/target/OpenRobertaUSB-${project.version}.jar</jar>
-							<outfile>${basedir}/../Resources/USBInstaller/Windows/OpenRobertaUSB.exe</outfile>
-							<errTitle></errTitle>
-							<cmdLine></cmdLine>
+                            <outfile>${basedir}/../Resources/USBInstaller/Windows/${project.artifactId}.exe</outfile>
+							<jar>${basedir}/target/${project.artifactId}-${project.version}.jar</jar>
 							<chdir>.</chdir>
-							<priority>normal</priority>
-							<downloadUrl></downloadUrl>
-							<supportUrl></supportUrl>
-							<stayAlive>false</stayAlive>
 							<restartOnCrash>true</restartOnCrash>
-							<manifest></manifest>
 							<icon>src/main/resources/images/OR.ico</icon>
-							<singleInstance>
-								<mutexName>OpenRoberta</mutexName>
-								<windowTitle></windowTitle>
-							</singleInstance>
-							<classPath>
+                            <classPath>
 								<mainClass>de.fhg.iais.roberta.usb.USBProgramLauncher</mainClass>
 								<jarLocation>lib/*</jarLocation>
 								<jarLocation>resources/*</jarLocation>
 							</classPath>
-							<jre>
-								<path>java/</path>
-								<bundledJre64Bit>false</bundledJre64Bit>
-								<bundledJreAsFallback>false</bundledJreAsFallback>
-								<minVersion>1.6.0_0</minVersion>
-								<maxVersion></maxVersion>
-								<jdkPreference>jreOnly</jdkPreference>
-								<runtimeBits>64/32</runtimeBits>
-								<opts>
-									<opt>-Dfile.encoding=UTF-8</opt>
-								</opts>
-							</jre>
+							<singleInstance>
+								<mutexName>OpenRoberta</mutexName>
+								<windowTitle></windowTitle>
+							</singleInstance>
+                            <jre>
+                                <minVersion>1.8.0</minVersion>
+                            </jre>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <id>copy-jars</id>
+                        <phase>package</phase>
+                        <configuration>
+                            <target>
+                                <copy file="target/${project.artifactId}-${project.version}.jar" tofile="../Resources/USBInstaller/Linux/${project.artifactId}.jar"/>
+								<copy file="target/${project.artifactId}-${project.version}.jar" tofile="../Resources/USBInstaller/OSX/${project.artifactId}.jar"/>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
 	</build>
