--- a/OpenRobertaUSB/pom.xml
+++ b/OpenRobertaUSB/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>de.fhg.iais.openroberta</groupId>
+	<groupId>de.fhg.iais.roberta</groupId>
 	<artifactId>OpenRobertaUSB</artifactId>
 	<version>2.9.0-SNAPSHOT</version>
 	<properties>
@@ -101,7 +101,7 @@
 				</includes>
 			</resource>
 			<resource>
-				<targetPath>${basedir}/../Resources/USBInstaller/OSX/resources/osx/arduino</targetPath>
+				<targetPath>${basedir}/../Resources/USBInstaller/OSX/root/Applications/OpenRobertaUSB.app/Contents/resources/osx/arduino</targetPath>
 				<directory>resources/osx/arduino</directory>
 				<includes>
 					<include>avrdude</include>
@@ -175,7 +175,7 @@
                         <configuration>
                             <target>
                                 <copy file="target/${project.artifactId}-${project.version}.jar" tofile="../Resources/USBInstaller/Linux/${project.artifactId}.jar"/>
-								<copy file="target/${project.artifactId}-${project.version}.jar" tofile="../Resources/USBInstaller/OSX/${project.artifactId}.jar"/>
+								<copy file="target/${project.artifactId}-${project.version}.jar" tofile="../Resources/USBInstaller/OSX/root/Applications/OpenRobertaUSB.app/Contents/${project.artifactId}.jar"/>
                             </target>
                         </configuration>
                         <goals>
