--- a/OpenRobertaUSB/pom.xml
+++ b/OpenRobertaUSB/pom.xml
@@ -2,11 +2,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.fhg.iais.roberta</groupId>
 	<artifactId>OpenRobertaUSB</artifactId>
-	<version>2.9.0-SNAPSHOT</version>
+	<version>3.0.0</version>
 	<properties>
 		<!-- the server and the crosscompiler SHOULD be compatible between(including) the following two versions of software deployed on the ROBOT -->
 		<validversionrange.From>1.4.0</validversionrange.From>
-		<validversionrange.To>2.9.0</validversionrange.To>
+		<validversionrange.To>3.0.0</validversionrange.To>
 
 		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
 		<buildTimeStamp>${maven.build.timestamp}</buildTimeStamp>
