--- a/OpenRobertaUSB/pom.xml
+++ b/OpenRobertaUSB/pom.xml
@@ -2,11 +2,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.fhg.iais.roberta</groupId>
 	<artifactId>OpenRobertaUSB</artifactId>
-	<version>3.0.0</version>
+	<version>3.1.0</version>
 	<properties>
 		<!-- the server and the crosscompiler SHOULD be compatible between(including) the following two versions of software deployed on the ROBOT -->
 		<validversionrange.From>1.4.0</validversionrange.From>
-		<validversionrange.To>3.0.0</validversionrange.To>
+		<validversionrange.To>3.1.0</validversionrange.To>
 
 		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
 		<buildTimeStamp>${maven.build.timestamp}</buildTimeStamp>
@@ -92,6 +92,13 @@
 				</includes>
 			</resource>
 			<resource>
+				<targetPath>${basedir}/../Resources/USBInstaller/Linux</targetPath>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>arduino-ids.txt</include>
+				</includes>
+			</resource>
+			<resource>
 				<targetPath>${basedir}/../Resources/USBInstaller/Windows/resources/windows/arduino</targetPath>
 				<directory>resources/windows/arduino</directory>
 				<includes>
@@ -101,11 +108,25 @@
 				</includes>
 			</resource>
 			<resource>
+				<targetPath>${basedir}/../Resources/USBInstaller/Windows</targetPath>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>arduino-ids.txt</include>
+				</includes>
+			</resource>
+			<resource>
 				<targetPath>${basedir}/../Resources/USBInstaller/OSX/Resources/osx/arduino</targetPath>
 				<directory>resources/osx/arduino</directory>
 				<includes>
 					<include>avrdude</include>
 					<include>avrdude.conf</include>
+				</includes>
+			</resource>
+			<resource>
+				<targetPath>${basedir}/../Resources/USBInstaller/OSX/</targetPath>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>arduino-ids.txt</include>
 				</includes>
 			</resource>
 		</resources>
